Final interactive birthday slider1

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ background: white;
 }
 </style>
 </head>
+
 <body>
 <div class="slides-container">
 <!-- Slide 1: Title + first photo -->
@@ -198,4 +199,4 @@ alert('Surprise! Swipe or tap the arrows to see your birthday story ðŸ’–')
 }, 2500);
 </script>
 </body>
-</html
+</html>
