Final interactive birthday slider2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>For Someone Special â ̃oï ̧</title>
+<title>For Someone Special 👀💖</title>
 <style>
 body {
 margin: 0;
@@ -110,37 +110,34 @@ background: white;
 <div class="slides-container">
 <!-- Slide 1: Title + first photo -->
 <div class="slide active">
-<h1>Happy Birthday, Salonee! ðŸŽ‚ðŸ’–</h1>
+<h1>Happy Birthday, Salonee! 🥳🎂</h1>
 <img src="Chotti Salonee.jpg" alt="Chotti Salonee">
-<div class="message">You make my world extra special just by being in it âœ ̈<div>
+<div class="message">You make my world extra special just by being in it 😁<div>
 </div>
   <!-- Slide 2 -->
 <div class="slide">
 <img src="pose.jpg" alt="Cute pose">
-<div class="message">1. You make every day brighter â ̃€ï ̧</div>
+<div class="message">1. You make every day brighter ✨</div>
 </div>
   <!-- Slide 3 -->
 <div class="slide">
 <img src="smile.jpg" alt="Aapki Muskan">
-<div class="message">2. Your smile is my favorite thing ðŸ ̃„ â€” Aapki Muskan<
-div>
-</div>
+<div class="message">2. Your smile is my favorite thing 🌝</div>
   <!-- Slide 4 -->
 <div class="slide">
 <img src="golu.jpg" alt="Golu Molu">
-<div class="message">3. Tujhi Golu Molu Pic ðŸ ̃‡</div>
+<div class="message">3. Tujhi Golu Molu Pic 🦦</div>
 </div>
   <!-- Slide 5 -->
 <div class="slide">
 <img src="together.jpg" alt="Together">
 <div class="message">
-4. May you have a great year ahead, stay blessed and enjoy your day ðŸ•‰ï ̧
-</div>
+4. May you have a great year ahead, stay blessed and enjoy your day ॐ </div>
 </div>
   <!-- Slide 6: Final message -->
 <div class="slide">
 <div class="heart">
-Thank you for always being there for me! â¤ï ̧<br>
+Thank you for always being there for me! 💖
 Swipe or tap to look back at our favorite moments again.
 </div>
 </div>
