--- a/index.html
+++ b/index.html
@@ -1,199 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>For Someone Special 👀💖</title>
-<style>
-body {
-margin: 0;
-background: linear-gradient(45deg, pink, red, purple);
-font-family: 'Arial', sans-serif;
-text-align: center;
-color: white;
-overflow: hidden;
-}
-  h1 {
-font-size: 2.3em;
-margin: 0 10px 20px;
-animation: pulse 2s infinite;
-}
-  @keyframes pulse {
-0% { transform: scale(1); }
-50% { transform: scale(1.05); }
-100% { transform: scale(1); }
-}
-  .slides-container {
-display: flex;
-overflow: hidden;
-width: 100vw;
-height: 100vh;
-position: relative;
-}
-  .slide {
-min-width: 100%;
-flex-shrink: 0;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-padding: 20px;
-transform: translateX(100%);       opacity: 0;
-transition: transform 0.6s ease, opacity 0.6s ease;
-}
-.slide.activetransform:opacity: 1;
-}
-{
-translateX(0);
-img {
-width: 260px;
-height: 260px;
-object-fit: cover;
-border-radius: 50%;
-margin: 20px 0;
-box-shadow: 0 0 25px rgba(255,255,255,0.6);
-animation: float 3s ease-in-out infinite;
-}
-@keyframes float {
-0%, 100% { transform: translateY(0); }
-50% { transform: translateY(-10px); }
-}
-.message {
-font-size: 1.2em;
-margin: 10px 15px;
-}
-.heart {
-font-size: 1.6em;
-margin: 0 20px;
-animation: heartbeat 1.5s infinite;
-}
-@keyframes heartbeat {
-0%, 100% { transform: scale(1); }
-50% { transform: scale(1.2); }
-}
-.nav-btn {
-position: fixed;
-top: 50%;
-transform: translateY(-50%);background: rgba(255,255,255,0.2);
-border: none;
-color: white;
-font-size: 2rem;
-padding: 8px 14px;
-border-radius: 999px;
-cursor: pointer;
-}
-  .nav-btn:hover {
-background: rgba(255,255,255,0.35);
-}
-  .prev { left: 10px; }
-.next { right: 10px; }
-  .dots {
-position: fixed;
-bottom: 15px;
-left: 50%;
-transform: translateX(-50%);
-}
-  .dot {
-display: inline-block;
-width: 10px;
-height: 10px;
-margin: 0 4px;
-border-radius: 50%;
-background: rgba(255,255,255,0.4);
-}
-  .active-dot {
-background: white;
-}
-</style>
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>For Someone Special ☺️</title>
+  <style>
+    body {
+      margin: 0;
+      background: linear-gradient(45deg, pink, red, purple);
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
+      overflow-x: hidden;   /* allow normal vertical scroll if needed */
+    }
 
+    h1 {
+      font-size: 2em;
+      margin: 15px 10px 5px;
+    }
+
+    #slider {
+      position: relative;
+      width: 100vw;
+      min-height: calc(100vh - 90px);
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .slide {
+      position: absolute;
+      top: 50px;
+      left: 0;
+      width: 100%;
+      padding: 10px 20px 40px;
+      opacity: 0;
+      transform: translateX(100%);
+      transition: all 0.6s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .slide.active {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    img {
+      width: 70vw;          /* responsive width */
+      max-width: 260px;
+      height: auto;
+      aspect-ratio: 1 / 1;
+      object-fit: cover;
+      border-radius: 50%;
+      margin: 10px 0 15px;
+      box-shadow: 0 0 25px rgba(255,255,255,0.6);
+    }
+
+    .message {
+      font-size: 1.05em;
+      margin: 0 10px;
+    }
+
+    .heart {
+      font-size: 1.3em;
+      margin: 0 20px;
+    }
+
+    .nav-btn {
+      position: fixed;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(255,255,255,0.25);
+      border: none;
+      color: white;
+      font-size: 1.8rem;
+      padding: 6px 12px;
+      border-radius: 999px;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    .nav-btn:active {
+      transform: translateY(-50%) scale(0.95);
+    }
+
+    .prev { left: 6px; }
+    .next { right: 6px; }
+
+    .dots {
+      position: fixed;
+      bottom: 12px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 9;
+    }
+
+    .dot {
+      display: inline-block;
+      width: 8px;
+      height: 8px;
+      margin: 0 3px;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.4);
+    }
+
+    .dot.active-dot {
+      background: white;
+    }
+
+    @media (min-width: 768px) {
+      h1 { font-size: 2.4em; }
+      .message, .heart { font-size: 1.2em; }
+    }
+  </style>
+</head>
 <body>
-<div class="slides-container">
-<!-- Slide 1: Title + first photo -->
-<div class="slide active">
-<h1>Happy Birthday, Salonee! 🥳🎂</h1>
-<img src="Chotti Salonee.jpg" alt="Chotti Salonee">
-<div class="message">You make my world extra special just by being in it 😁<div>
-</div>
-  <!-- Slide 2 -->
-<div class="slide">
-<img src="pose.jpg" alt="Cute pose">
-<div class="message">1. You make every day brighter ✨</div>
-</div>
-  <!-- Slide 3 -->
-<div class="slide">
-<img src="smile.jpg" alt="Aapki Muskan">
-<div class="message">2. Your smile is my favorite thing 🌝</div>
-  <!-- Slide 4 -->
-<div class="slide">
-<img src="golu.jpg" alt="Golu Molu">
-<div class="message">3. Tujhi Golu Molu Pic 🦦</div>
-</div>
-  <!-- Slide 5 -->
-<div class="slide">
-<img src="together.jpg" alt="Together">
-<div class="message">
-4. May you have a great year ahead, stay blessed and enjoy your day ॐ </div>
-</div>
-  <!-- Slide 6: Final message -->
-<div class="slide">
-<div class="heart">
-Thank you for always being there for me! 💖
-Swipe or tap to look back at our favorite moments again.
-</div>
-</div>
-</div>
-  <!-- Navigation arrows -->
-<button class="nav-btn prev">âŸ ̈</button>
-<button class="nav-btn next">âŸ©</button>
-<!-- Dots -->
-<div class="dots"></div>
-  <script>
-const slides = document.querySelectorAll('.slide');
-const dotsContainer = document.querySelector('.dots');
-let current = 0;
-  // Create dots
-slides.forEach((_, i) => {
-const dot = document.createElement('span');
-dot.className = 'dot' + (i === 0 ? ' active-dot' : '');
-dot.dataset.index = i;
-dotsContainer.appendChild(dot);
-});
-  const dots = document.querySelectorAll('.dot');
-  function showSlide(index) {
-slides[current].classList.remove('active');
-dots[current].classList.remove('active-dot');
-  current = (index + slides.length) % slides.length;
-  slides[current].classList.add('active');
-dots[current].classList.add('active-dot');
-}
-  document.querySelector('.next').addEventListener('click', () => {
-showSlide(current + 1);
-});
-  document.querySelector('.prev').addEventListener('click', () => {
-showSlide(current - 1);
-});
-  dots.forEach(dot => {
-dot.addEventListener('click', () => {
-showSlide(parseInt(dot.dataset.index));
-});
-});
-  // Swipe support for phones
-let startX = 0;const container = document.querySelector('.slides-container');
-  container.addEventListener('touchstart', (e) => {
-startX = e.touches[0].clientX;
-});
-  container.addEventListener('touchend', (e) => {
-const endX = e.changedTouches[0].clientX;
-const diff = endX - startX;
-if (Math.abs(diff) > 50) {
-if (diff < 0) showSlide(current + 1);
-else showSlide(current - 1);
-}
-});
-  // Popup surprise
-setTimeout(() => {
-alert('Surprise! Swipe or tap the arrows to see your birthday story ðŸ’–');
-}, 2500);
-</script>
+  <h1>Happy Birthday, Salonee! 🎂💖</h1>
+
+  <div id="slider">
+    <div class="slide active">
+      <img src="'Chotti Salonee.jpg'" alt="Chotti Salonee">
+      <div class="message">You make my world extra special just by being in it ✨</div>
+    </div>
+
+    <div class="slide">
+      <img src="pose.jpg" alt="Cute pose">
+      <div class="message">1. You make every day brighter ☀️</div>
+    </div>
+
+    <div class="slide">
+      <img src="smile.jpg" alt="Aapki Muskan">
+      <div class="message">2. Your smile is my favorite thing 😄 — Aapki Muskan</div>
+    </div>
+
+    <div class="slide">
+      <img src="golu.jpg" alt="Golu Molu">
+      <div class="message">3. Tujhi Golu Molu Pic 😇</div>
+    </div>
+
+    <div class="slide">
+      <img src="together.jpg" alt="Together">
+      <div class="message">
+        4. May you have a great year ahead, stay blessed and enjoy your day 🕉️
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="heart">
+        Thank you for always being there for me! ❤️<br>
+        Swipe or tap the arrows to see our favorite moments again.
+      </div>
+    </div>
+  </div>
+
+  <button class="nav-btn prev">⟨</button>
+  <button class="nav-btn next">⟩</button>
+  <div class="dots"></div>
+
+  <script>
+    const slides = document.querySelectorAll('.slide');
+    const prevBtn = document.querySelector('.prev');
+    const nextBtn = document.querySelector('.next');
+    const dotsWrap = document.querySelector('.dots');
+    let index = 0;
+
+    // dots
+    slides.forEach((_, i) => {
+      const d = document.createElement('span');
+      d.className = 'dot' + (i === 0 ? ' active-dot' : '');
+      d.dataset.i = i;
+      dotsWrap.appendChild(d);
+    });
+    const dots = document.querySelectorAll('.dot');
+
+    function show(i) {
+      slides[index].classList.remove('active');
+      dots[index].classList.remove('active-dot');
+      index = (i + slides.length) % slides.length;
+      slides[index].classList.add('active');
+      dots[index].classList.add('active-dot');
+    }
+
+    nextBtn.onclick = () => show(index + 1);
+    prevBtn.onclick = () => show(index - 1);
+    dots.forEach(d => d.onclick = () => show(parseInt(d.dataset.i)));
+
+    // swipe for phones
+    let startX = 0;
+    const slider = document.getElementById('slider');
+    slider.addEventListener('touchstart', e => startX = e.touches[0].clientX);
+    slider.addEventListener('touchend', e => {
+      const diff = e.changedTouches[0].clientX - startX;
+      if (Math.abs(diff) > 50) diff < 0 ? show(index + 1) : show(index - 1);
+    });
+
+    setTimeout(() => {
+      alert('Surprise! Swipe or tap the arrows to see your birthday story 💖');
+    }, 2000);
+  </script>
 </body>
 </html>
+
